#fix of group profile modal to show scroll-bar if member list doesn't fit on window

--- a/css/profile.css
+++ b/css/profile.css
@@ -281,6 +281,10 @@
 }
 */
 
+.profile-modal .members {
+    overflow-y: auto;
+}
+
 h1.profile-name {
     display: inline;
 }
