--- a/theme_nin/sass/_profile.sass
+++ b/theme_nin/sass/_profile.sass
@@ -67,6 +67,9 @@ $modal-postboard-post-height: 100%
       margin: 0
       padding: 0
 
+    .members
+        overflow-y: auto
+
 .profile-modal
   h2.profile-screen-name
     display: block
